--- a/public/static2/contact.en-US.html
+++ b/public/static2/contact.en-US.html
@@ -2,7 +2,7 @@
   <div class="site-header">Contact Information</div>
 
   <div class="site-item">
-    <div class="site-question" >For website problems, technical issues, suggestions, business enquiries, etc.</div>
+    <div class="site-question" >For website problems, technical issues, suggestions, business inquiries, etc.</div>
     <div class="site-answer">Join the telegram group: <a href="https://t.me/getaroof" class="site-link">https://t.me/getaroof</a></div>
   </div>
 
