--- a/public/static2/contact.en-US.html
+++ b/public/static2/contact.en-US.html
@@ -1,11 +1,16 @@
 <div class="site-section">
-  <div class="site-header">Contact Information</div>
+  <div class="site-header">Contact Us</div>
 
-  <div class="site-item">
-    <div class="site-question" >For website problems, technical issues, suggestions, business inquiries, etc.</div>
-    <div class="site-answer">Join the telegram group: <a href="https://t.me/getaroof" class="site-link">https://t.me/getaroof</a></div>
+      <div class="icon-container">
+        <a href="https://t.me/getaroof" class="site-link">
+          <img src="/img/tg.svg" alt="telegram" width="60px" height="60px" />
+        </a>
+        <a href="https://line.me/ti/p/pvujhnZ01L" class="site-link">
+          <img src="/img/line.svg" alt="line" width="60px" height="60px" />
+        </a>
+      </div>
+
   </div>
-
 </div>
 
 
