--- a/public/static2/faq.en-US.html
+++ b/public/static2/faq.en-US.html
@@ -2,11 +2,11 @@
 <div class="site-section">
   <div class="site-header">Frequently Asked Questions</div>
 
-  <div class="site-subheader">LENDING</div>
+  <div class="site-subheader">RENTING OUT</div>
 
   <div class="site-item">
-    <div class="site-question" >What type of housing can I lend?</div>
-    <div class="site-answer">You can lend any type of housing.</div>
+    <div class="site-question" >What type of housing can I rent?</div>
+    <div class="site-answer">You can rent any type of housing.</div>
   </div>
 
   <div class="site-item">
@@ -16,14 +16,14 @@
 
   <div class="site-item last-child">
     <div class="site-question" >How much do you charge?</div>
-    <div class="site-answer">We don't charge anything at the moment.</div>
+    <div class="site-answer">It's FREE.</div>
   </div>
 
   <div class="site-subheader">WEBSITE</div>
 
   <div class="site-item">
     <div class="site-question">Do you offer customer support?</div>
-    <div class="site-answer">Yes, our customer support team is available to assist you with any queries.</div>
+    <div class="site-answer">Yes, our customer support is available to assist you. See the 'Contact Us' page.</div>
   </div>
 
   <div class="site-item last-child">
